# open-source-data-warehouse-poc

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
dags/: weather_dag.py
dbt/: dbt_project.yml  profiles.yml
dbt/models/marts/: mart_daily_weather_summary.sql  schema.yml
dbt/models/raw/: raw_weather.sql  schema.yml
dbt/models/staging/: schema.yml  stg_weather.sql
k8s/: README.md
k8s/airflow/: values.yaml
k8s/clickhouse/: values.yaml
k8s/secrets/: README.md  create-secrets.sh
k8s/traefik/: ingressroutes.yaml  values.yaml
src/: __init__.py
src/data_pipeline/ingestion/: weather_data_collector.py
src/data_pipeline/ingestion/clients/: base.py  clickhouse.py  storage.py  weather.py
src/data_pipeline/ingestion/configs/: constants.py
src/data_pipeline/ingestion/data/: dutch_cities.txt
src/data_pipeline/ingestion/models/: clickhouse.py  location.py  scaleway_storage.py
src/data_pipeline/ingestion/utils/: city_utils.py  weather_utils.py
terraform/: README.md  container_registry.tf  k8s.tf  object_storage.tf  provider.tf  variables.tf
